--- a/HowItWork/HowItWork.html
+++ b/HowItWork/HowItWork.html
@@ -36,6 +36,8 @@
   </div>
   <!-- ***** Preloader End ***** -->
 
+
+
 <section id="steps-284">
     <div class="cs-container">
         <!-- Left Section -->
@@ -45,7 +47,7 @@
             <p class="cs-text">
                 Щоб потрапити на карту міста - перейдіть за цією кнопкою
             </p>
-            <a href="Map/MAINMAP.html" class="cs-button-solid">На мапу</a>
+            <a href="" class="cs-button-solid">На мапу</a>
         </div>
         <!-- Right Section -->
         <ul class="cs-right-section">
@@ -76,6 +78,7 @@
         </ul>
     </div>
 </section>
+                                
 
 <style>
 body {
@@ -88,5 +91,16 @@ body {
     padding: 40px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
 }
+
+/* Дополнительные стили для других элементов страницы */
+.cs-content {
+    /* стили для левой части с контентом */
+}
+
+.cs-right-section {
+    /* стили для правой части с контентом */
+}
+
+/* и так далее */
 
 </style>
