--- a/Rozklad/Tram.html
+++ b/Rozklad/Tram.html
@@ -123,8 +123,8 @@
             }
         }
         .scrollable {
-            max-height: 600px; 
-            overflow-y: auto; 
+            max-height: 600px; /* Установите максимальную высоту, которая подходит для вашего дизайна */
+            overflow-y: auto; /* Добавляет вертикальную прокрутку, если содержимое превышает максимальную высоту */
         }
     </style>
 </head>
@@ -162,7 +162,7 @@
 
     <script>
         const scheduleData = [
-
+            // Автобусы
             { route: "101", departure: "08:00", arrival: "08:30", date: "2023-04-01", transport: "bus" },
             { route: "102", departure: "08:15", arrival: "08:45", date: "2023-04-01", transport: "bus" },
             { route: "103", departure: "08:30", arrival: "09:00", date: "2023-04-01", transport: "bus" },
@@ -184,6 +184,7 @@
             { route: "119", departure: "12:30", arrival: "13:00", date: "2023-04-01", transport: "bus" },
             { route: "120", departure: "12:45", arrival: "13:15", date: "2023-04-01", transport: "bus" },
 
+            // Трамваи
             { route: "201", departure: "08:00", arrival: "08:30", date: "2023-04-02", transport: "tram" },
             { route: "202", departure: "08:15", arrival: "08:45", date: "2023-04-02", transport: "tram" },
             { route: "203", departure: "08:30", arrival: "09:00", date: "2023-04-02", transport: "tram" },
@@ -205,6 +206,7 @@
             { route: "219", departure: "12:30", arrival: "13:00", date: "2023-04-02", transport: "tram" },
             { route: "220", departure: "12:45", arrival: "13:15", date: "2023-04-02", transport: "tram" },
 
+            // Метро
             { route: "301", departure: "08:00", arrival: "08:15", date: "2023-04-03", transport: "metro" },
             { route: "302", departure: "08:15", arrival: "08:30", date: "2023-04-03", transport: "metro" },
             { route: "303", departure: "08:30", arrival: "08:45", date: "2023-04-03", transport: "metro" },
@@ -226,6 +228,7 @@
             { route: "319", departure: "12:30", arrival: "12:45", date: "2023-04-03", transport: "metro" },
             { route: "320", departure: "12:45", arrival: "13:00", date: "2023-04-03", transport: "metro" },
 
+            // Троллейбусы
             { route: "401", departure: "08:00", arrival: "08:30", date: "2023-04-04", transport: "trolleybus" },
             { route: "402", departure: "08:15", arrival: "08:45", date: "2023-04-04", transport: "trolleybus" },
             { route: "403", departure: "08:30", arrival: "09:00", date: "2023-04-04", transport: "trolleybus" },
@@ -277,7 +280,7 @@
                 }
 
                 if (dateFilter && item.date !== dateFilter) {
-                    match = false; 
+                    match = false;
                 }
 
                 if (timeFilter && item.departure !== timeFilter) {
@@ -288,12 +291,13 @@
             });
 
             if (transportFilter === "" && dateFilter === "" && timeFilter === "") {
-                renderTable([]); 
+                renderTable([]); // Очищаем таблицу, если все фильтры пусты
             } else {
                 renderTable(filteredData);
             }
         }
 
+        // Загрузка данных при загрузке страницы
         filterTable();
     </script>
 </body>
